--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@apollo/client": "^3.0.0",
     "@kitware/vtk.js": "^28.12.0",
     "apollo-angular": "^5.0.2",
+    "graphql": "^16",
     "itk-wasm": "^1.0.0-b.18",
+    "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.2",
