--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@apollo/client": "^3.0.0",
+    "@iwharris/dicom-data-dictionary": "^1.26.0",
     "@kitware/vtk.js": "^28.12.0",
     "apollo-angular": "^5.0.2",
     "graphql": "^16",
@@ -34,6 +35,7 @@
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.8.6",
     "autoprefixer": "^10.4.15",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
