--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@iwharris/dicom-data-dictionary": "^1.26.0",
     "@kitware/vtk.js": "^28.12.0",
     "apollo-angular": "^5.0.2",
+    "apollo-upload-client": "^17.0.0",
     "graphql": "^16",
     "itk-wasm": "^1.0.0-b.18",
     "primeicons": "^6.0.1",
@@ -34,6 +35,7 @@
     "@angular-devkit/build-angular": "^16.2.2",
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/apollo-upload-client": "^17.0.4",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.8.6",
     "autoprefixer": "^10.4.15",
