Add result tag functionality

--- a/angular.json
+++ b/angular.json
@@ -73,6 +73,20 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "local": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -85,6 +99,9 @@
             },
             "development": {
               "browserTarget": "ftesis:build:development"
+            },
+            "local": {
+              "browserTarget": "ftesis:build:local"
             }
           },
           "defaultConfiguration": "development"
