Change graphql dependency to extractfiles for intercept

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@kitware/vtk.js": "^28.12.0",
     "apollo-angular": "^5.0.2",
     "apollo-upload-client": "^17.0.0",
+    "extract-files": "^13.0.0",
     "graphql": "^16",
     "itk-wasm": "^1.0.0-b.18",
     "primeicons": "^6.0.1",
@@ -36,6 +37,7 @@
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.10",
     "@types/apollo-upload-client": "^17.0.4",
+    "@types/extract-files": "^8.1.2",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.8.6",
     "autoprefixer": "^10.4.15",
